@@ -1,3 +1,9 @@
+2001-12-20  Tsutomu Okada <okada@furuno.co.jp>
+
+	* [w3m-dev 02672]
+	* main.c (wrap_GC_warn_proc): msg_ring initial value
+	* main.c (SigAlarm): not need #ifdef USE_ALARM, already guarded
+
 2001-12-18  Fumitoshi UKAI  <ukai@debian.or.jp>
 
 	* [#493911] too few arguments to function `longjmp' 
